[package]
name = "gnu-linux-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
flate2 = "1.0"
tar = "0.4"
ar = "0.9"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["stream"] }
futures = "0.3"
thiserror = "1.0"
xz2 = "0.1"
